--- a/Coding/my_friend_list_project/app/src/main/res/layout/activity_add_new_friend.xml
+++ b/Coding/my_friend_list_project/app/src/main/res/layout/activity_add_new_friend.xml
@@ -4,17 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="#99daf3"
     android:gravity="center_horizontal"
+    android:orientation="vertical"
     tools:context=".activity_add_new_friend">
 
-    <TextView
-        android:gravity="center_horizontal"
+    <ImageView
+        android:id="@+id/imageView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:adjustViewBounds="false"
+        android:background="@color/colorPrimary"
+        android:cropToPadding="false"
+        app:srcCompat="@android:drawable/ic_menu_edit" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="136dp"
+        android:drawableBottom="@android:drawable/ic_menu_myplaces"
+        android:drawableTop="@color/colorPrimaryDark"
+        android:fontFamily="@android:string/dialog_alert_title"
+        android:gravity="center_vertical|center_horizontal"
         android:text="Insert your new friend"
-        android:textSize="30sp"
-        android:textColor="@color/colorAccent"/>
+        android:textColor="#040404"
+        android:textSize="36sp"
+        android:textStyle="bold"
+        tools:drawableBottom="@android:drawable/btn_star_big_on"
+        tools:drawableTop="@color/colorPrimary" />
 
     <TableRow
         android:layout_width="match_parent"
@@ -23,17 +39,21 @@
         <TextView
             android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorAccent"
-            android:text="First name: "/>
+            android:text="First name: "
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            tools:paddingLeft="10dp" />
 
         <EditText
             android:id="@+id/edtFirstName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="Enter your friend's first name"
-            android:layout_weight="1"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="15dp"
 
-            />
+            android:layout_weight="1"
+            android:hint="Enter your friend's first name" />
 
     </TableRow>
 
@@ -44,16 +64,19 @@
         <TextView
             android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorAccent"
-            android:text="Middle name: "/>
+            android:paddingLeft="10dp"
+            android:text="Middle name: "
+            android:textColor="@color/colorPrimaryDark"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/edtMiddleName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="Enter your friend's middle name"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="15dp"
             android:layout_weight="1"
-            />
+            android:hint="Enter your friend's middle name" />
 
     </TableRow>
 
@@ -64,17 +87,20 @@
         <TextView
             android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorAccent"
-            android:text="Last name: "/>
+            android:paddingLeft="10dp"
+            android:text="Last name: "
+            android:textColor="@android:color/background_dark"
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/edtLastName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="Enter your friend's last name"
-            android:layout_weight="1"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="15dp"
 
-            />
+            android:layout_weight="1"
+            android:hint="Enter your friend's last name" />
 
     </TableRow>
 
@@ -83,18 +109,21 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:text="Your friend's birthday:"
-            android:textColor="@color/colorAccent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingRight="20dp"/>
+            android:paddingLeft="10dp"
+            android:paddingRight="20dp"
+            android:text="Your friend's birthday:"
+            android:textColor="@android:color/background_dark"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/btnDateTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="select date"
-            />
+            android:textColorHint="@android:color/background_light"
+            android:textStyle="bold" />
 
     </TableRow>
 
@@ -106,8 +135,10 @@
         <TextView
             android:layout_width="90dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:text="Gender:"
             android:textColor="@color/colorAccent"
-            android:text="Gender:"/>
+            android:textStyle="bold" />
 
         <Spinner
             android:id="@+id/spinner"
@@ -117,18 +148,26 @@
         </Spinner>
     </TableRow>
 
-    <Button
-        android:id="@+id/btnAdd"
-        android:text="ADD"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <Button
+        android:id="@+id/btnAdd"
+        android:layout_width="82dp"
+        android:layout_height="wrap_content"
+        android:text="ADD"
+        android:textStyle="bold" />
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="false"
+        android:background="@color/colorPrimary"
+        android:cropToPadding="false"
+        app:srcCompat="@android:drawable/ic_menu_add" />
 
 
 </LinearLayout>
