--- a/source/my_friend_list_project/app/src/main/res/layout/activity_main.xml
+++ b/source/my_friend_list_project/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#99daf3"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -13,68 +12,37 @@
         android:layout_height="wrap_content"
         android:layout_gravity="end">
 
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="7dp"
-            android:background="#7cd0e9"
-            android:cropToPadding="false"
-            app:srcCompat="@android:drawable/ic_input_add" />
-
         <TextView
+            android:textColor="@color/colorAccent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="3dp"
-            android:text="Search follow:"
-            android:textColor="@color/colorAccent"
-            android:textStyle="bold"
-            android:textSize="20dp"/>
+            android:text="Search follow:"/>
 
 
         <Spinner
             android:id="@+id/spinner_sort"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:alwaysDrawnWithCache="false"
-            android:animateLayoutChanges="false"
-            android:gravity="center_vertical"></Spinner>
+            android:layout_height="wrap_content">
+        </Spinner>
 
 
         <TextView
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:layout_height="wrap_content"/>
 
         <Button
             android:id="@+id/btnAddNewFriend"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:text = "ADD"
             android:layout_gravity="end"
-            android:text="ADD" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
 
     </TableRow>
 
 
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#9cfe9f"
-        app:srcCompat="@android:drawable/btn_star_big_on" />
-
     <ListView
         android:id="@+id/listFriend"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="30dp"
-        android:background="@android:color/transparent"
-        android:backgroundTint="@android:drawable/dialog_holo_dark_frame"
-        android:cacheColorHint="@color/colorPrimary"
-        tools:listheader="@android:color/holo_blue_bright" />
+        android:layout_height="match_parent" />
 </LinearLayout>
